--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,9 @@
         <groupId>${quarkus.platform.group-id}</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus.platform.version}</version>
+        <configuration>
+      <debug>6006</debug>
+    </configuration>
         <extensions>true</extensions>
         <executions>
           <execution>
